--- a/act322/chessboard.html
+++ b/act322/chessboard.html
@@ -196,9 +196,7 @@
 
 </div>
 
-<br>
-<br>
-<p id="desc">Chess is a game of smarts. Outplay your opponent to reach checkmate and win the game!</p><br>
+<p id="desc">Chess is a game of smarts. Outplay your opponent to reach checkmate and win the game!</p>
 
 <div>
 <button class="button" type="button">Play a Game!</button>
