--- a/act322/chessboard.html
+++ b/act322/chessboard.html
@@ -18,6 +18,14 @@
         background-repeat: inherit;
     }
 
+    .header {
+        padding: 2vw;
+        margin-bottom: 3vw;
+        text-align: center;
+        background:#838D72;
+        color: white;
+    }
+
     #micos {
         text-align: center;
         font-family: 'Poppins', sans-serif;
@@ -39,7 +47,7 @@
     }
 
     .chessboard {
-        border: 2vw solid burlywood;
+        border: 2vw solid #9CA48E;
         box-sizing: content-box;
         display: flex;
         flex-direction: column;
@@ -84,13 +92,13 @@
         padding: 2vw 6vw;
         color: black;
         border: black;
-        background-color: burlywood;
+        background-color: #9CA48E;
         cursor: pointer;
         font-size: 2vw;
     }
 
     .button:hover {
-        background-color: coral;
+        background-color: #789b3d;
         color: white;
         border-radius: 1vw;
     }
@@ -100,7 +108,9 @@
 
 <body>
 
+<div class="header">
     <h2 id="micos">MICO'S CHESSBOARD</h2>
+</div>
 
 <div class="chessboard">
 
