User Stories accomplished

--- a/act407/results.html
+++ b/act407/results.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Montserrat&display=swap""
+    rel="stylesheet">
     <title>Document</title>
 </head> 
 <body>
     <div id="results"></div>
-<a href="landing.html">Back to Registration Form</a>
+    
+<a href="landing.html">Back to Mico's Landing Page</a>
 
 <script>
     const resultsList = document.getElementById('results')
