Banking App Added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <h1><a href="https://micoongkeko.github.io/batch8-activities/act0419/Momentum.html">Momentum Page</a></h1>
 <h1><a href="https://micoongkeko.github.io/batch8-activities/act327/cbgridsinglescroll.html">Chessboard</a></h1>
 <h1><a href="https://micoongkeko.github.io/batch8-activities/act407/landing.html">Personal Product Page</a></h1>
+<h1><a href="https://micoongkeko.github.io/batch8-activities/bankingapp/index.html">Banking App</a></h1>
 
 
 
