Initial Banking App Complete with Error Handlers

--- a/bankingapp/newuser.html
+++ b/bankingapp/newuser.html
@@ -33,7 +33,7 @@
         <input type="password" class="newAccInput" id="passwordInput" name="password" placeholder="Enter Password" required>
     <br>
         <label id="initialDepositLabel">INITIAL DEPOSIT</label> <br>
-        <input type="number" class="newAccInput" id="initialDepositInput" name="initialDeposit" placeholder="Enter Initial Deposit" required>
+        <input type="number" class="newAccInput" id="initialDepositInput" name="initialDeposit" placeholder="Enter Initial Deposit" min=0 required>
         
     </form>
     <button type="submit" id="createNewAcc" form="newAccForm">REGISTER</button>
